# uri

./: LICENSE  Makefile  Makefile.in  README.md  configure.in  memory.c  memory_shim.h  run_test_memory  test_uri.c  uri.c  uri.h
internal/: charset.c  charset.h  percent.c  percent.h  rfc_charset.c  rfc_charset.h  str.c  str.h  text_validate.c  text_validate.h
tests/: memory_shim.c  memory_shim.h  support.c  support.h  test_attack.c  test_construct.c  test_extra.c  test_percent.c  test_rfc_charset.c  test_text_validate.c  test_uri.c
